show basic board

--- a/application/modules/sudoku/views/scripts/layout.phtml
+++ b/application/modules/sudoku/views/scripts/layout.phtml
@@ -4,6 +4,7 @@
     <?php $this->headLink()
         ->appendStylesheet('/css/bootstrap.css')
         ->appendStylesheet('/css/styles.css')
+        ->appendStylesheet('/css/board.css')
     ?>
     <?php echo $this->headLink() ?>
     <?php echo $this->headTitle() ?>
