Global refactor project

--- a/application/modules/sudoku/views/scripts/index/index.phtml
+++ b/application/modules/sudoku/views/scripts/index/index.phtml
@@ -1,4 +1,1 @@
-<div>Game Sudoku</div>
-<div class="game-board">
-    <?php echo $this->render('game/board.phtml'); ?>
-</div>
+<div>index.phtml</div>
