--- a/application/modules/sudoku/views/scripts/layout.phtml
+++ b/application/modules/sudoku/views/scripts/layout.phtml
@@ -4,6 +4,7 @@
     <?php $this->headLink()
         ->appendStylesheet('/css/bootstrap.css')
         ->appendStylesheet('/css/styles.css')
+        ->appendStylesheet('/css/sudoku.css')
     ?>
     <?php echo $this->headLink() ?>
     <?php echo $this->headTitle() ?>
@@ -13,6 +14,7 @@
         ->appendFile('/js/jquery-2.0.3.js')
         ->appendFile('/js/bootstrap.js')
         ->appendFile('/js/global.js')
+        ->appendFile('/js/sudoku.js')
 ?>
 </head>
 <body onload="gogogo();">
