--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,9 @@
 .game-title {
     text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
 }
+
 #board {
     width: 325px;
     margin: auto;
