--- a/application/modules/sudoku/views/scripts/_extra/board.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/board.phtml
@@ -16,7 +16,7 @@ function isGray($row, $col) {
     return $isGray;
 }
 ?>
-<div class="sudoku-table" ondragstart="return false;" ondrop="return false;">
+<div class="sudoku-table" ondragstart="return false;" ondrop="return false;" data-selected-cell="" data-hovered-number="">
 
     <div class="game-params">
         Cells opened initially: <span><?php echo count($game['openCells']);?></span>
@@ -28,9 +28,6 @@ function isGray($row, $col) {
             You have solved this sudoku!
         </div>
     </div>
-
-    <input type="hidden" name="selected-cell" value="" class="selected-cell">
-    <input type="hidden" name="hovered-number" value="" class="hovered-number">
 
     <table class="sudoku-board">
         <?php for ($r = 1; $r <= $rows; $r++): ?>
@@ -86,3 +83,5 @@ function isGray($row, $col) {
         <button class="clear-field btn btn-mini btn-danger">Clear</button>
     </div>
 </div>
+
+<?php $this->headScript()->appendScript('var $game = new window.Sudoku(\'#game-sudoku\');'); ?>
