--- a/application/modules/sudoku/views/scripts/_extra/board.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/board.phtml
@@ -84,4 +84,4 @@ function isGray($row, $col) {
     </div>
 </div>
 
-<?php $this->headScript()->appendScript('var $game = new window.Sudoku(\'#game-sudoku\');'); ?>
+<?php $this->headScript()->appendScript('var $game = new window.Sudoku(\'.sudoku-table\');'); ?>
