You CAN register

--- a/application/modules/sudoku/views/scripts/_extra/login-register-form.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/login-register-form.phtml
@@ -13,7 +13,7 @@
                         <div class="message"></div>
                     </div>
                     <div class="control-group form-field field-password">
-                        <input type="text" placeholder="Password" name="password" value="">
+                        <input type="password" placeholder="Password" name="password" value="">
                         <div class="message"></div>
                     </div>
                     <div class="control-group">
