Form's messages styles

--- a/application/modules/sudoku/views/scripts/_extra/login-register-form.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/login-register-form.phtml
@@ -37,11 +37,11 @@
                         <div class="message"></div>
                     </div>
                     <div class="control-group form-field field-password">
-                        <input type="text" placeholder="Password" name="password" value="">
+                        <input type="password" placeholder="Password" name="password" value="">
                         <div class="message"></div>
                     </div>
                     <div class="control-group form-field field-password-repeat">
-                        <input type="text" placeholder="Password (again)" name="password_repeat" value="">
+                        <input type="password" placeholder="Password (again)" name="password_repeat" value="">
                         <div class="message"></div>
                     </div>
                     <div class="control-group">
