Login/register form new errors messages style

--- a/application/modules/sudoku/views/scripts/_extra/login-block.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/login-block.phtml
@@ -26,12 +26,10 @@
                             <input type="hidden" name="submitted" value="1">
                             <div class="form-message"></div>
                             <div class="control-group form-field field-login-email">
-                                <input type="text" placeholder="Login or Email" name="login_email" value="">
-                                <div class="message"></div>
+                                <input type="text" placeholder="Login or Email" name="login_email" value="" class="message-tooltip" data-placement="right">
                             </div>
                             <div class="control-group form-field field-password">
-                                <input type="password" placeholder="Password" name="password" value="">
-                                <div class="message"></div>
+                                <input type="password" placeholder="Password" name="password" value="" class="message-tooltip" data-placement="right">
                             </div>
                             <div class="control-group">
                                 <input class="btn btn-primary submit-form" type="button" value="Yes, it's me!">
@@ -51,15 +49,12 @@
                                 <input type="text" placeholder="Login" name="login" value="">
                                 &nbsp;and/or&nbsp;
                                 <input type="text" placeholder="Email" name="email" value="">
-                                <div class="message"></div>
                             </div>
                             <div class="control-group form-field field-password">
-                                <input type="password" placeholder="Password" name="password" value="">
-                                <div class="message"></div>
+                                <input type="password" placeholder="Password" name="password" value="" class="message-tooltip" data-placement="right">
                             </div>
                             <div class="control-group form-field field-password-repeat">
-                                <input type="password" placeholder="Password (again)" name="password_repeat" value="">
-                                <div class="message"></div>
+                                <input type="password" placeholder="Password (again)" name="password_repeat" value="" class="message-tooltip" data-placement="right">
                             </div>
                             <div class="control-group">
                                 <input class="btn btn-primary submit-form" type="button" value="Hello!">
