--- a/application/modules/sudoku/views/scripts/_extra/login-block.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/login-block.phtml
@@ -18,7 +18,7 @@
                     </div>
                     <div class="other-authorizations">
                         <script src="//ulogin.ru/js/ulogin.js"></script>
-                        <div id="uLogin" data-ulogin="display=panel;fields=first_name;providers=google,vkontakte,facebook;redirect_uri=<?php echo $this->uLoginRedirectUrl; ?>"></div>
+                        <div id="uLogin" data-ulogin="<?php echo $this->uLoginData; ?>"></div>
                     </div>
                     <hr class="line-separator">
                     <div class="login-form">
