--- a/application/modules/sudoku/views/scripts/_extra/board.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/board.phtml
@@ -4,7 +4,7 @@ $rows = 9;
 
 /** @var Application_Model_Game_Sudoku $sudoku */
 $sudoku = $this->sudoku;
-$game = $sudoku->getParams();
+$game = $sudoku->getParameters();
 
 /**
  * @param int $row
