WebSocket simple test script

--- a/application/modules/sudoku/views/scripts/layout.phtml
+++ b/application/modules/sudoku/views/scripts/layout.phtml
@@ -24,6 +24,7 @@
 <?php echo $this->render('_extra/navigation.phtml'); ?>
 
 <div class="container" id="container">
+    <button onclick="window.test('123123');">test</button>
     <?php echo $this->layout()->content ?>
 </div>
 
